--- a/_talks/2024-10-17-talk-1.md
+++ b/_talks/2024-10-17-talk-1.md
@@ -8,7 +8,7 @@ date: 2024-10-17
 location: "Berlin, Germany"
 ---
 
-In this talk, I presented the commonly used AI workflows when building AI-driven applications, including prompt engineering, fine-tuning, RAG and AI agents. I discussed the pros and cons of each workflow, and how to choose the right one for different scenarios. Specifically, I focused on the concept of agentic workflows, and explained in detail how to build an agentic workflow for a autonomous application with a concrete example.
+In this talk, I presented the commonly used AI workflows when building AI-driven applications, including prompt engineering, fine-tuning, RAG and AI agents. I discussed the pros and cons of each workflow, and how to choose the right one for different scenarios. Specifically, I focused on the concept of agentic workflows, and explained in detail how to build an agentic workflow for a autonomous application with concrete examples.
 
 Event link: [IT UA Talk #8: "Agentic Workflows"](https://www.linkedin.com/events/ituatalk-8-agenticworkflows7249059379394543617/)
 
